@@ -28,6 +28,10 @@ namespace mesmer
     virtual HinderedRotorA* Clone() { return new HinderedRotorA(*this); }
 
   private:
+
+    // Calculation of the modifed Bessel function, Io(x), for real x.
+    double ModifiedBessalFuncion(const double x) const ;
+
     std::string m_bondID;
     double      m_barrier;
     int         m_periodicity;
